Lógica para alterar usuário logado ou não removida.

--- a/FarmSales/SubPages/Partials/Header.html
+++ b/FarmSales/SubPages/Partials/Header.html
@@ -19,26 +19,17 @@
                 <li>
                     <a href="#/entregadores">Entregadores</a>
                 </li>
-                <li ng-show="userLoggedIn">
+                <li>
                     <a href="#/metas">Metas</a>
                 </li>
-                <li ng-show="userLoggedIn">
+                <li>
                     <a href="#/realizar">Realizar</a>
                 </li>
-                <li ng-show="userLoggedIn">
-                    <a href="#/solicitar">Solicitar</a>
+                <li>
+                    <a href="#/realizar">Solicitar</a>
                 </li>
-                <li ng-hide="userLoggedIn">
-                    <a href="#/register">Registre-se</a>
-                </li>
-                <li ng-hide="userLoggedIn">
-                    <a href="#/login">Entrar</a>
-                </li>
-                <li ng-show="userLoggedIn">
+                <li>
                     <a href="#/perfil">Meu Perfil</a>
-                </li>
-                <li ng-show="userLoggedIn">
-                    <a href="#/login">Sair</a>
                 </li>
             </ul>
         </div>
