--- a/FarmSales/SubPages/Partials/Header.html
+++ b/FarmSales/SubPages/Partials/Header.html
@@ -9,7 +9,7 @@
             </button>
             <!-- You'll want to use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
             <a class="navbar-brand" href="#/">
-                <img src="http://i.imgur.com/3cDr8Ay.png" alt="iZer" style="width: 40px; margin-top: -10px;">
+                <img src="http://i.imgur.com/3cDr8Ay.png" alt="FarmSales" style="width: 40px; margin-top: -10px;">
                 </a>
         </div>
 
@@ -17,16 +17,13 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="#/entregadores">Entregadores</a>
+                    <a href="#/noticias">Notícias</a>
                 </li>
                 <li>
-                    <a href="#/metas">Metas</a>
+                    <a href="#/mercado">Mercado</a>
                 </li>
                 <li>
-                    <a href="#/realizar">Realizar</a>
-                </li>
-                <li>
-                    <a href="#/realizar">Solicitar</a>
+                    <a href="#/investimentos">Investimentos</a>
                 </li>
                 <li>
                     <a href="#/perfil">Meu Perfil</a>
