Atualização do Perfil e diversos outros itens.

--- a/FarmSales/SubPages/Partials/Header.html
+++ b/FarmSales/SubPages/Partials/Header.html
@@ -26,7 +26,7 @@
                     <a href="#/investimentos">Investimentos</a>
                 </li>
                 <li>
-                    <a href="#/perfil">Meu Perfil</a>
+                    <a href="#/detalhes">Detalhes</a>
                 </li>
             </ul>
         </div>
