--- a/FarmSales/SubPages/Partials/Header.html
+++ b/FarmSales/SubPages/Partials/Header.html
@@ -9,7 +9,7 @@
             </button>
             <!-- You'll want to use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
             <a class="navbar-brand" href="#/">
-                <img src="http://i.imgur.com/3cDr8Ay.png" alt="FarmSales" style="width: 40px; margin-top: -10px;">
+                <img src="../../SubPages/Images/farmsales-fs.png" alt="FarmSales" style="width: 80px; margin-top: -18px;">
                 </a>
         </div>
 
