--- a/FarmSales/SubPages/Partials/Header.html
+++ b/FarmSales/SubPages/Partials/Header.html
@@ -26,7 +26,7 @@
                     <a href="#/investimentos">Investimentos</a>
                 </li>
                 <li>
-                    <a href="#/detalhes">Detalhes</a>
+                    <a href="#/detalhes">Meu Rendimento</a>
                 </li>
             </ul>
         </div>
